--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,111 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* -----------------hero section----------------- */
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.slider-container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    /* background: linear-gradient(to right, #ff7e5f, #feb47b); */
+}
+
+.slider {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+    min-width: 100%;
+}
+
+.slide img {
+    width: 100%;
+    display: block;
+}
+
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.prev {
+    left: 10px;
+}
+
+.next {
+    right: 10px;
+}
+
+/* ---------------------navbar---------------- */
+.navbar {
+    position: fixed;
+    margin: auto;
+    top: 0;
+    left: 0;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: inherit;
+    padding: 15px 40px;
+    z-index: 1000; 
+}
+/* .navLink{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+} */
+
+.navbar a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    font-size: 1.2rem;
+}
+#logoImage{
+    height: 50px;
+    width: auto;
+}
+
+#searchBox{
+    border-radius: 27px;
+    width: 250px;
+    padding: 10px 35px 10px 10px; /* Space for the icon */
+    border: 1px solid #ccc;
+    border-radius: 30px;
+}
+.searchDiv{
+    position: relative;
+    display: inline-block;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#searchImg{
+    height: 15px;
+    width: auto;
+    position: absolute;
+    right: 10px; 
+    top: 50%;
+    transform: translateY(-50%);
+    width: 16px; /* Adjust size */
+    height: 16px;
+    cursor: pointer;
+}
