--- a/CSS/packages.css
+++ b/CSS/packages.css
@@ -6,14 +6,18 @@
 
 .tours-section {
   max-width: 1200px;
-  margin: auto;
+  margin: 60px auto;
   text-align: center;
 }
 
 .tours-section h2 {
-  font-size: 2rem;
-  margin-bottom: 30px;
-  color: #2d3e50;
+  font-size: 2.9rem;
+  margin-bottom: 5px;
+  font-weight: 600;
+  color: black;
+}
+.tour-section p{
+  font-size: 1rem;
 }
 
 .tour-cards {
@@ -21,6 +25,8 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   justify-items: center;
+  margin: auto;
+  margin-top: 60px;
 }
 
 .tour-card {
