--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ nav {
   background: rgba(0, 0, 0, 0.6);
   position: absolute;
   width: 100vw;
-  height: 5vh;
+  height: 10vh;
   overflow: hidden;
   z-index: 10;
   margin: auto;
@@ -34,8 +34,8 @@ nav a {
 }
 
 .logo-image {
-  height: 40px;
-  margin-left: 50px;
+  height: 45px;
+  margin-left: 60px;
 }
 
 .nav-div{
@@ -127,31 +127,22 @@ nav a {
 .hero-content h2 {
   font-size: 3.5rem;
   margin-bottom: 20px;
-  line-height: 0.5;
-}
-
-.hero-content input {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  font-size: 1rem;
-  line-height: 0.5;
+  line-height: 1.5;
 }
 
 .search-container {
   display: flex;
   justify-content: center; 
   margin: 30px 0px;
-  margin-left: -20px;
   padding: 0 20px;
   max-width: 700px;
-  width: 100%;
+  width: 80%;
   align-items: center;
 }
 
 .search-container input {
   flex: 1;
-  padding: 16px 28px;
+  padding: 18px 29px;
   font-size: 18px;
   border: none;
   border-right: none;
@@ -163,6 +154,7 @@ nav a {
 .search-container button {
   padding: 16px 28px;
   font-size: 18px;
+  box-sizing: border-box;
   border: 2px solid #28a745;
   background-color: #28a745;
   color: white;
