--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -52,3 +52,13 @@
   0% { transform: translateX(0); }
   100% { transform: translateX(50%); }
 }
+
+
+
+
+
+#postcard-image{
+  height: auto;
+  width: 1280px;
+  margin: 20px 0px auto auto;
+}
