--- a/CSS/destinations.css
+++ b/CSS/destinations.css
@@ -10,8 +10,16 @@
 
 .destinations-section h2 {
   font-size: 2.5rem;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   color: black;
+}
+
+.destinations-section p {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #666;
+  margin-bottom: 50px;
+  
 }
 
 .places-row1 {
@@ -46,8 +54,8 @@
   overflow: hidden;
   border-radius: 1px;
   cursor: pointer;
-  height: 250px;
-  width: 350px;
+  height: 210px;
+  width: 320px;
 }
 
 .place-card img {
