--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -4,22 +4,24 @@
   padding: 0;
   box-sizing: border-box;
 }
-html, body {
+html,
+body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
+  box-sizing: border-box;
   background: #f0f0f0;
   font-family: sans-serif;
 }
 
 /* Gallery Section */
 .gallery-section {
-  padding: 60px 20px;
+  padding: 60px 0px;
+  margin: auto 0px;
   background: #fff;
   color: #111;
   text-align: center;
+   width: 100%;
+    overflow: hidden;
 }
 
 .gallery-section h2 {
@@ -28,15 +30,11 @@ body {
   color: #333;
 }
 
-/* Slider Container */
 .slider-row {
   width: 100%;
-  max-width: 1280px;
-  margin: 0 auto 30px auto; /* Centered & with bottom spacing */
   overflow: hidden;
 }
 
-/* Slider Track (scrollable area) */
 .slider-track {
   display: flex;
   gap: 5px;
@@ -44,23 +42,33 @@ body {
   animation: none;
 }
 
-/* Images inside slider */
-.slider-track img {
+.img1 {
   width: 400px;
   height: 250px;
   object-fit: cover;
   flex-shrink: 0;
-  border-radius: 8px;
+  border-radius: 3px;
   pointer-events: none;
   display: block;
+   align-items: stretch;
 }
 
-/* On hover: scroll animation */
+.img2 {
+  width: 200px;
+  height: 250px;
+  object-fit: cover;
+  flex-shrink: 0;
+  border-radius: 3px;
+  pointer-events: none;
+  display: block;
+   align-items: stretch;
+}
+
+/* -------------scroll animation----------- */
 .slider-row:hover .slider-track {
   animation: scroll 30s linear infinite;
 }
 
-/* Scroll animation */
 @keyframes scroll {
   0% {
     transform: translateX(0);
@@ -70,7 +78,6 @@ body {
   }
 }
 
-/* Postcard image */
 #postcard-image {
   width: 100%;
   max-width: 1280px;
