--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -20,19 +20,27 @@ body {
   background: #fff;
   color: #111;
   text-align: center;
-   width: 100%;
-    overflow: hidden;
+  width: 100%;
+  overflow: hidden;
 }
 
 .gallery-section h2 {
   font-size: 2.5rem;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   color: #333;
+}
+
+.gallery-section p {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #666;
+  margin-bottom: 50px;
 }
 
 .slider-row {
   width: 100%;
   overflow: hidden;
+  margin: 5px 0px;
 }
 
 .slider-track {
@@ -47,10 +55,10 @@ body {
   height: 250px;
   object-fit: cover;
   flex-shrink: 0;
-  border-radius: 3px;
+  border-radius: 1px;
   pointer-events: none;
   display: block;
-   align-items: stretch;
+  align-items: stretch;
 }
 
 .img2 {
@@ -58,10 +66,10 @@ body {
   height: 250px;
   object-fit: cover;
   flex-shrink: 0;
-  border-radius: 3px;
+  border-radius: 1px;
   pointer-events: none;
   display: block;
-   align-items: stretch;
+  align-items: stretch;
 }
 
 /* -------------scroll animation----------- */
