--- a/CSS/destinations.css
+++ b/CSS/destinations.css
@@ -24,6 +24,7 @@
 
 .places-row1 {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
   gap: 20px;
@@ -33,6 +34,7 @@
 
 .places-row2 {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
   gap: 20px;
@@ -42,6 +44,7 @@
 
 .places-row3{
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
   gap: 20px;
@@ -58,6 +61,21 @@
   width: 320px;
 }
 
+.place-card .label {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: #fff;
+  padding: 0px 6px;
+  font-size: 14px;
+  border-radius: 4px;
+  font-weight: 600;
+  z-index: 2;
+  font-size: 2.2rem;
+
+}
+
+
 .place-card img {
   width: 100%;
   height:100%;
@@ -67,15 +85,21 @@
 
 .place-card .overlay {
   position: absolute;
-  bottom: 0;
+  top: 0;                  
   left: 0;
   right: 0;
-  background: rgba(0,0,0,0.6);
+  bottom: 0;         
+  background: rgba(0, 0, 0, 0.6);
   color: #fff;
   padding: 20px;
+  display: flex;          
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   transform: translateY(100%);
   transition: transform 0.3s ease;
 }
+
 
 .place-card:hover img {
   transform: scale(1.1);
@@ -83,4 +107,7 @@
 
 .place-card:hover .overlay {
   transform: translateY(0);
+}
+.place-card:hover .label{
+  display: none;
 }
