--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -17,7 +17,7 @@ body {
 .gallery-section {
   padding: 60px 0px;
   margin: auto 0px;
-  background: #fff;
+  background: white;
   color: #111;
   text-align: center;
   width: 100%;
@@ -90,6 +90,6 @@ body {
   width: 100%;
   max-width: 1280px;
   height: auto;
-  margin: 20px auto 0 auto;
+  margin: 0px auto;
   display: block;
 }
