--- a/CSS/destinations.css
+++ b/CSS/destinations.css
@@ -115,3 +115,74 @@
     padding: 0px 100px; 
   }
 }
+
+@media (max-width: 400px) {
+.places-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  max-width: 1280px;
+  margin: 0 0;
+  padding: 0px 30px;
+}
+
+.place-card {
+  flex: 1 1 300px;     
+  width: 100%;  
+  height: 160px;}
+
+  .place-card .label {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: #fff;
+  padding: 0px 3px;
+  font-weight: 300;
+  font-size: 1rem;
+  z-index: 2;
+
+}
+
+.place-card .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(60%);
+  transition: transform 0.3s ease;
+  text-align: center;
+  display: none;
+
+}
+.place-card:hover .overlay {
+  display: flex;
+}
+
+.overlay h3,
+.overlay p {
+  font-size: 0.8rem;
+}
+
+
+
+.place-card:hover img {
+  transform: scale(1.1);
+}
+
+.place-card:hover .overlay {
+  transform: translateY(0);
+}
+
+.place-card:hover .label {
+  display: none;
+}
+}
